Clean responsive structure with Diamante alignment and fix

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <img src="images/logo.png" alt="OrbitalVerse Logo" onclick="window.location.href='/'" />
-    </div>
-    <nav>
+  <header class="flex-header">
+    <img src="images/logo.png" alt="OrbitalVerse Logo" class="header-logo" onclick="window.location.href='/'" />
+    <nav class="nav-links">
       <a href="#whatwedo">What We Do</a>
       <a href="#platforms">Platforms</a>
       <a href="#team">Who We Are</a>
@@ -25,17 +23,16 @@
   <!-- HERO -->
   <section class="hero">
     <h1 class="neon-title">Unifying AI Agents & Web3 Discovery</h1>
-    <p class="subtitle">A futuristic ecosystem of personal automation, AI agents, and decentralized rewards — now aligned with <strong>Diamante</strong>.</p>
-    <div class="hero-images">
-      <img src="images/logo.png" alt="OrbitalVerse" class="hero-logo"/>
-      <img src="images/diamante.png" alt="Diamante" class="diamante-logo"/>
-    </div>
+    <p class="subtitle">
+      A futuristic ecosystem of personal automation, AI agents, and decentralized rewards — now aligned with 
+      <img src="images/diamante.png" alt="Diamante Logo" class="inline-logo" />
+    </p>
   </section>
 
-  <!-- JOIN WAITLIST (CENTER SECTION) -->
+  <!-- JOIN WAITLIST -->
   <section class="waitlist-cta">
     <h2 class="neon-title">Join the Waitlist</h2>
-    <p>Be among the first to access the OrbitalVerse ecosystem when we launch on Diamante. Get early access, rewards & airdrop eligibility.</p>
+    <p>Be among the first to access the OrbitalVerse ecosystem and receive early airdrop eligibility.</p>
     <form class="email-form">
       <input type="email" placeholder="Enter your email" required>
       <button type="submit">Join Now</button>
@@ -46,28 +43,28 @@
   <section id="whatwedo" class="section">
     <h2 class="neon-title">What We Do</h2>
     <div class="features">
-      <div class="feature-box">🧠 Build Personal AI Agents tailored to your goals & emotions</div>
-      <div class="feature-box">💻 Turn devices into passive income smart miners</div>
-      <div class="feature-box">📊 Auto-curated AI Portfolios for crypto investing</div>
-      <div class="feature-box">🎓 Personalized Local AI Tutors for Web3 & AI education</div>
-      <div class="feature-box">🌐 Global Online Webinars with Web3 + AI Leaders</div>
+      <div class="feature-box">🧠 Personal AI Agents tailored to you</div>
+      <div class="feature-box">💻 Smart Mining across devices</div>
+      <div class="feature-box">📊 AI-Curated Investment Portfolios</div>
+      <div class="feature-box">🎓 Custom AI Learning Environments</div>
+      <div class="feature-box">🌐 Global Web3 + AI Webinars</div>
     </div>
   </section>
 
-  <!-- EXPLORE OUR PLATFORMS -->
+  <!-- PLATFORMS -->
   <section id="platforms" class="section">
     <h2 class="neon-title">Explore Our Platforms</h2>
     <div class="platforms">
       <div class="platform-card">
         <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan" />
         <h3>OrbitalScan</h3>
-        <p>Telegram MiniApp delivering daily alpha: memecoins, NFTs, and airdrops — all curated, trusted, and risk-assessed.</p>
+        <p>Daily curated alpha for memecoins, NFTs, and airdrops via Telegram MiniApp.</p>
         <a href="https://t.me/orbitalscan_bot" target="_blank" class="cta-button">Explore OrbitalScan</a>
       </div>
       <div class="platform-card">
         <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine" />
         <h3>OrbitalMine</h3>
-        <p>Gamified AI-powered mining with NFTs, reputation, and tokenized upgrades. Turn activity into automated rewards.</p>
+        <p>Gamified token mining with NFT-based upgrades, reputation & decentralized rewards.</p>
         <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="cta-button">Explore OrbitalMine</a>
       </div>
     </div>
@@ -77,15 +74,15 @@
   <section id="team" class="section">
     <h2 class="neon-title">Who We Are</h2>
     <p class="centered-text">
-      We are an experienced team of tech explorers with backgrounds in AI, machine learning, blockchain, design, and project strategy. Since 2016, we've initiated and contributed to dozens of innovations across Web3 and intelligent automation. OrbitalVerse is not just a platform — it's a long-term vision for future-native technology.
+      We are a collective of explorers with deep roots in AI, blockchain, product design and Web3 ecosystems. Since 2016, we've built and contributed to dozens of decentralized innovations — united now in OrbitalVerse, an intelligent future for automated personal technology.
     </p>
   </section>
 
-  <!-- PARTNER WITH US -->
+  <!-- PARTNER -->
   <section id="waitlist" class="section">
     <h2 class="neon-title">Partner with Us</h2>
     <p class="centered-text">
-      Join our mission and shape the future together. We're actively seeking partners aligned with our vision.
+      Help shape the OrbitalVerse. We're currently onboarding partners who share our vision.
     </p>
     <div class="email-form">
       <a href="https://example.com/partner-form" target="_blank" class="cta-button">Become a Partner</a>
@@ -94,7 +91,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 OrbitalVerse. Built with ❤️ on Diamante</p>
+    <p>&copy; 2025 OrbitalVerse. Powered by Diamante.</p>
   </footer>
 </body>
 </html>
